# pdlcflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  evals-nightly.yml  release-images.yml
apps/studio/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
apps/studio/src/: main.css  main.tsx
deploy/: .env.example  README.md  docker-compose.yml  install.sh  pdlcflow  setup.sh  uninstall.sh  update.sh
deploy/postgres-init/: 01-app-role.sh
docs/.research/: .langgraph-bedrock-saas-migration-2026-06-05.md  execution-arc-design.md  stub-gaps-roadmap.md
docs/.research/cc-switch/: 00-cc-switch-capability-inventory.md  01-pdlcflow-current-state.md  02-gap-analysis.md  03-prd-01-byok-completion.md  04-prd-02-provider-settings-console.md  05-prd-03-provider-health-connectivity.md  06-prd-04-provider-preset-catalog.md  07-prd-05-resilient-llm-routing.md  08-prd-06-config-versioning-import-export.md  09-prd-07-cost-analytics-enhancements.md  10-prd-08-egress-network-controls.md  11-prd-09-mcp-tool-server-management.md  12-prd-10-prompt-persona-packs.md  99-roadmap.md  README.md
docs/onboarding/: 2-getting-started.md  2a-setup-walkthrough.md  3-going-deeper.md  4-bringing-your-own-spec.md  5-bringing-your-own-roadmap.md  6-implementing-a-requirement.md  7-fixing-a-bug.md  8-shipping-and-release.md  9-operating-effectively.md  README.md  journey.html
docs/wiki/: 01-overview.md  02-installation.md  03-configuration.md  04-launching.md  05-core-flow.md  06-agents.md  07-party-mode.md  08-inception.md  09-construction.md  10-operation.md  11-night-shift.md  12-utilities.md  13-studio.md  14-monitoring.md  15-migration.md  16-api-reference.md  17-evals.md  18-data-model.md  19-observability.md  20-mcp-tools.md  README.md
infra/cdk/: README.md  cdk.json  package.json  tsconfig.json
infra/cdk/lib/: auth-stack.ts  bedrock-stack.ts  (+6 more)
infra/compose/: .env.example  README.md  docker-compose.yml
infra/terraform/: .gitignore  DEPLOY_RUNBOOK.md  README.md  example.tfvars
scripts/: run_eval_suite.py
services/nexus-dashboard/: Dockerfile  README.md  app.py
services/pdlc-engine/: Dockerfile  alembic.ini  pyproject.toml
services/pdlc-engine/app/: __init__.py  config.py  evals.py  main.py  narrative.py
services/pdlc-engine/app/analytics/: __init__.py  postgres_store.py  store.py
services/pdlc-engine/app/auth/: __init__.py  cognito.py  local.py  oidc.py  passwords.py  store.py  wiring.py
services/pdlc-engine/app/clickstream/: __init__.py  budget.py  callbacks.py  emitter.py
services/pdlc-engine/app/clickstream/sinks/: firehose.py  jsonl.py  postgres.py
services/pdlc-engine/app/db/: __init__.py  models.py  rls.py  session.py
services/pdlc-engine/app/db/migrations/: env.py
services/pdlc-engine/app/db/migrations/versions/: 0001_init.py  0002_rls.py  0003_rls_force.py  0004_auth_lookup.py  0005_thread_transcript.py  0006_hierarchy.py  0007_provider_health.py  0008_openai_compatible.py  0009_failover_chain.py  0010_llm_config_versions.py  0011_pricing_budgets.py  0012_extra_headers.py  0013_persona_prompts.py  0014_mcp_servers.py  0015_org_quotas.py
services/pdlc-engine/app/llm/: __init__.py  breaker.py  context_windows.py  errors.py  factory.py  pricing.py  pricing_catalog.json  probe.py  rate_limit.py  tier_map.py
services/pdlc-engine/app/llm/presets/: __init__.py  catalog.json
services/pdlc-engine/app/llm/providers/: __init__.py  _net.py  anthropic.py  azure.py  bedrock.py  claude_code.py  cli.py  codex.py  gemini.py  gemini_cli.py  ollama.py  openai.py  openai_compatible.py  vertex.py
services/pdlc-engine/app/observability/: __init__.py  tracing.py
services/pdlc-engine/app/persistence/: __init__.py  artifacts.py  tasks.py  transcript.py
services/pdlc-engine/app/routes/: approval_gates.py  auth.py  commands.py  entities.py  health.py  migrate.py
services/pdlc-engine/app/routes/admin/: __init__.py  _guard.py  agents.py  context.py  domains.py  evals.py  exports.py  features.py  initiatives.py  live.py  mcp.py  models.py  models_versions.py  narrative.py  pricing.py  prompts.py  squads.py  threads.py
services/pdlc-engine/app/runtime/: __init__.py  deploy_backend.py  dispatch.py  graph_runner.py  llm_backend.py  mcp_backend.py  ports.py  prompt_backend.py  redis_bus.py  security_backend.py  test_backend.py  vcs_backend.py  workspace.py
services/pdlc-engine/app/secretstore/: __init__.py
services/pdlc-engine/app/websocket/: handler.py
services/pdlc-engine/app/worker/: arq_settings.py
services/pdlc-engine/tests/: conftest.py  test_admin.py  test_auth.py  test_auth_mode_guard.py  test_byok.py  test_cli_providers.py  test_config_versions.py  test_construction_flow.py  test_context_meter.py  test_continue.py  test_durability.py  test_egress.py  test_evals.py  test_execution_arc.py  test_firehose_sink.py  test_graph_runner_tenant_scope.py  test_health.py  test_inception_flow.py  test_integration.py  test_llm_credentials.py  test_llm_factory.py  test_mcp.py  test_migrate.py  test_migrations.py  test_narrative.py  test_night_shift_flow.py  test_night_shift_stream.py  test_oidc.py  test_operation_flow.py  test_persistence.py  test_presets.py  test_pricing.py  test_probe.py  test_project_artifacts.py  test_prompts.py  test_quota_and_stdio.py  test_repo_files.py  test_resilience.py  test_secrets.py  test_streaming.py  (+3 more)
tools/pdlc-migrate/: pyproject.toml
tools/pdlc-migrate/pdlc_migrate/: __init__.py  backfill.py  cli.py  push.py  scan.py  taxonomy.py
tools/pdlc-migrate/tests/: test_pipeline.py  test_push.py  test_scan.py
tools/pdlc-migrate/tests/fixtures/sample_project/.beads/: tasks.json
tools/pdlc-migrate/tests/fixtures/sample_project/docs/pdlc/memory/: CHANGELOG.md  CONSTITUTION.md  DECISIONS.md  DEPLOYMENTS.md  INTENT.md  METRICS.md  OVERVIEW.md  ROADMAP.md  STATE.md
tools/pdlc-migrate/tests/fixtures/sample_project/docs/pdlc/memory/episodes/: 001_dark-mode_2026-01-15.md
(+69 files in other folders)
