[project]
name = "pdlc-engine"
version = "1.9.1"
description = "FastAPI engine for PDLC — routes, websockets, clickstream, DB, 7-provider LLM factory"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "arq>=0.26",
    # Durable graph state (Phase H): PostgresSaver checkpointer.
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "greenlet>=3.0",  # required by async SQLAlchemy (alembic online migrations)
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",  # FastAPI file uploads (chat attachments)
    # Extract text from uploaded docs so attachments reach the LLM as context.
    "pypdf>=5.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "hvac>=2.1",  # HashiCorp Vault client (secrets_backend=vault)
    "pdlc-event-schema",
    "pdlc-graph",
    # LLM provider SDKs — installed at boot per active provider config
    "langchain-core>=0.3",
    "langchain-aws>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-google-vertexai>=2.0",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.10", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "integration: requires live Postgres/Redis/MinIO (run with PDLC_RUN_INTEGRATION=1)",
    "eval: pdlcflow eval-harness tests (hermetic, deterministic stub judge)",
]
