[project]
name = "pdlc-migrate"
version = "1.8.0"
description = "Migration CLI — import upstream pdlc projects into pdlcflow"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pdlc-event-schema",  # backfill validates synthesized events against EVENT_TYPES
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
pdlc-migrate = "pdlc_migrate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdlc_migrate"]
